src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  /* border: solid green 0.0625rem; */
}

html {
  scroll-behavior: smooth
}

.ul-style {
  @apply flex flex-col gap-4 text-[14px];
}

ul.ul-style > li:first-child {
  @apply text-[#1E1F24] font-bold text-[12px];
}

ul.ul-style > li {
  @apply font-normal text-[14px];
}

.future-text {
  background: linear-gradient(90deg, #e0e1e6 58.12%, #d9edff 100%);
  background-clip: text;
  letter-spacing: -0.8562rem;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

label {
  @apply text-[#000] font-medium text-[22px] font-inter;
}

select {
  @apply text-[24px] text-[#222D4BB2] font-[450] pr-[1.25rem];
}

.faq-background {
  background-image: url(../app/assets/logo/World-Map.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

/* Define the container and slider */
.slider-container {
  position: relative;
  overflow: hidden;
  max-width: 100%;
}

.slider {
  display: flex;
  animation: scroll 20s linear infinite; /* Control the speed with the duration (15s) */
}

/* Keyframes for the sliding effect */
@keyframes scroll {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-50%);
  }
}

.swiper {
  width: 100%;
  max-height: 32.5rem;
  height: 100%;
}

.swiper-slide {
  text-align: center;
  font-size: 1.125rem;
  /* background: ; */
  display: flex;
  justify-content: center;
  align-items: center;
}

.swiper-pagination-bullet-active {
  background: #f57f20 !important;
}

.grid-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(21.875rem, 1fr));
  gap: 32px;
}

.grid-item {
  display: grid;
  grid-template-rows: subgrid;
  grid-row: span 4;
  background-image: url("../app/assets/icons/service-card-bg.svg");
  background-repeat: no-repeat;
  background-position: top center;
  background-size: calc(100% - 16px) 100%;
  overflow: hidden;
}

input.form-input {
  @apply py-[18px] md:py-[22px] pl-[24px] rounded-lg border-[1px] border-[#222D4B] placeholder:text-[24px] font-[450] placeholder:text-[#222D4BB2] text-[24px];
}

label.form-label {
  @apply text-[#000] font-medium  xl:text-[22px] font-inter;
}

select.form-select {
  @apply py-[18px] md:py-[22px] px-[24px] rounded-lg border-[1px] border-[#222D4B] placeholder:text-[24px] font-[450] placeholder:text-[#222D4BB2] text-[24px] w-full;
}

select.form-select option {
  font-size: 20px;
  width: 50px;
  overflow: hidden;
}

label.form-input {
  @apply py-[18px] md:py-[22px] pl-[24px] rounded-lg border-[1px] border-[#222D4B] font-[450] text-[#222D4BB2] text-[24px];
}

.slick-dots li button:before {
  color: #F57F20 !important;
}

.slick-dots li.slick-active button:before {
  color: #F57F20 !important;
}

.slick-prev:before,
.slick-next:before {
  color: #F57F20 !important;
}

